# signifier-trainer

./: .gitignore  README.md  pyproject.toml
configs/character/train/: sft_instruct_fsdp_baseline.yaml
configs/examples/: sft_instruct_fsdp.yaml
finetune/: dataset.py  sft.py  sft_types.py  training_mode.py
finetune/utils/: config.py  dataset.py  download_model.py  parser.py  setup_model.py  value_util.py
